--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
+    "swr": "^1.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
