--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.5",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14"
   },
